--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "bread",
   "version": "0.1.0",
+  "homepage": "https://nikodunk.github.io/bread",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-instagram-embed": "^1.3.4",
@@ -10,6 +12,8 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
