--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bread",
   "version": "0.1.0",
-  "homepage": "https://nikodunk.github.io/bread",
+  "homepage": "https://nikodunk.github.io/bread/",
   "private": true,
   "dependencies": {
     "gh-pages": "^1.1.0",
